# odysseus-social

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  package.yml  workflow-security.yml
packaging/: README.md  odysseus.env.example
packaging/systemd/: odysseus.service
scripts/ci/: build-apk-package.sh  build-aur-package.sh  build-deb-package.sh  build-package-artifacts.sh  build-rpm-package.sh  build-source-dist.sh  check-regressions.sh  finalize-artifacts.sh  package-common.sh
scripts/tests/: conftest.py  test_app.py  test_compare_js.py  test_reply_recipients_js.py  test_security_regressions.py  test_shell_routes.py  test_task_scheduler_session_delivery.py
static/social/: index.html
static/social/assets/: index-CrvVJjOn.css  index-tOrVvbWF.js
tests/: test_review_regressions.py
