[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odysseus-ai-workspace"
version = "1.0.0"
description = "Self-hosted AI workspace with chat, agents, research, documents, memory, email, calendar, and local tools."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Odysseus Contributors" },
]
keywords = ["ai", "agents", "fastapi", "self-hosted", "workspace"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/DonnieDice/odysseus"
Issues = "https://github.com/DonnieDice/odysseus/issues"

[tool.setuptools]
include-package-data = true
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["core*", "mcp_servers*", "routes*", "services*", "src*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.optional = { file = ["requirements-optional.txt"] }

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
